--- a/Bit6FullDemo-Java/ios/build.gradle
+++ b/Bit6FullDemo-Java/ios/build.gradle
@@ -18,7 +18,6 @@ dependencies {
     compile fileTree(dir: 'lib', include: '*.jar')
 }
 
-//http://multi-os-engine.github.io/doc/multi-os-engine/1_getting_started/5_project_customization_via_gradle/project_customization_via_gradle.html
 moe {
     mainClassName 'Main'
 
@@ -36,7 +35,7 @@ moe {
         //Xcode Project Options
         deploymentTarget '9.0'
         applicationExitOnSuspend false
-        mainProductName 'Bit6'
+
         //xcodeProjectDirPath 'xcode'
         generateProject true
         bundleShortVersionString '0.9.8'
@@ -45,13 +44,10 @@ moe {
         //Signing options
         bundleID 'com.bit6.ChatDemo'
 
-        //Storyboard
-        mainUIStoryboardPath 'src/main/resources/MainUI.storyboard'
-
         //App icons
         appIconsSource = 'AppIcon'
 
         //Splash screen
-        launchScreenFilePath 'src/main/resources/LaunchScreen.xib'
+        launchImagesSource 'LaunchImage'
     }
 }
