- added LaunchScreen to sample - removed unnused properties in build.gradle - updated info.plist

--- a/Bit6FullDemo-Java/ios/build.gradle
+++ b/Bit6FullDemo-Java/ios/build.gradle
@@ -36,18 +36,13 @@ moe {
         deploymentTarget '9.0'
         applicationExitOnSuspend false
 
-        //xcodeProjectDirPath 'xcode'
         generateProject true
-        bundleShortVersionString '0.9.8'
-        bundleVersion '1'
-
-        //Signing options
-        bundleID 'com.bit6.ChatDemo'
 
         //App icons
         appIconsSource = 'AppIcon'
 
         //Splash screen
         launchImagesSource 'LaunchImage'
+        launchScreenFilePath 'LaunchScreen'
     }
 }
