--- a/Bit6FullDemo-Java/ios/src/main/Info.plist
+++ b/Bit6FullDemo-Java/ios/src/main/Info.plist
@@ -5,11 +5,11 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>ChatDemo</string>
+	<string>Bit6</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>ChatDemo</string>
+	<string>com.bit6.ChatDemo</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
