--- a/Bit6FullDemo-Java/ios/src/main/Info.plist
+++ b/Bit6FullDemo-Java/ios/src/main/Info.plist
@@ -26,6 +26,27 @@
 	<string>com.bit6.chatdemo.Main</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Bit6 wants to get access to your location.</string>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>amazonaws.com</key>
+			<dict>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSTemporaryExceptionMinimumTLSVersion</key>
+				<string>TLSv1.1</string>
+			</dict>
+		</dict>
+	</dict>
 	<key>MainUI</key>
 	<string>MainUI</string>
 	<key>UIBackgroundModes</key>
